--- a/scrollFoto.html
+++ b/scrollFoto.html
@@ -12,9 +12,11 @@
         });
 
         let currentIndex = 0;
-        function updateSlider() {
-            const width = timeline.offsetWidth;
+        function updateSlider(instant = false) {
+            const rect = timeline.getBoundingClientRect();
+            const width = rect.width;
             const offset = -currentIndex * width;
+            timeline.style.transition = instant ? 'transform 0s ease-in-out' : 'transform 0.3s ease-in-out';
             timeline.style.transform = `translateX(${offset}px)`;
 
             const time = items[currentIndex].getElementsByTagName('img')[0].src.slice(-15).substring(0, 5).replace("-", ":");
@@ -31,6 +33,10 @@
                 slider.value = currentIndex;
                 updateSlider();
             }
+        });
+
+        window.addEventListener('resize', (e) => {
+            updateSlider(true);
         });
 
         updateSlider();
